Added test statement

--- a/Assignments/A2/Assignment 2.ipynb
+++ b/Assignments/A2/Assignment 2.ipynb
@@ -27,7 +27,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Next, we input the 2 data sets\n",
+    "#Next, we input the 2 data sets as provided in the folder.\n",
     "best_df=pd.read_csv('BestIncome.txt', sep=\",\", names=['lab_inc','cap_inc', 'hgt', 'wgt'])\n",
     "survey_df=pd.read_csv('SurvIncome.txt', sep=\",\", names=['tot_inc','wgt', 'age', 'female'])\n"
    ]
