--- a/Assignments/A3/Simulation_Exercise.ipynb
+++ b/Assignments/A3/Simulation_Exercise.ipynb
@@ -18,7 +18,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import scipy.stats at sts\n",
+    "import scipy.stats as sts\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from matplotlib.ticker import MultipleLocator\n",
@@ -27,31 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "means= np.array([100, 0.75,0.6,57,64])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import math\n",
-    "\n",
-    "math.log\n",
-    "rho=\n",
-    "growth=\n",
-    "\n",
-    "math.log(income)=(1-rho)*(math.log(incbase))+rho*(math.log())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,12 +44,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "  \n",
-    "    p = {\n",
+    "p = {\n",
     "        'start_inc'   : 80000,      #starting income\n",
     "        'stddev'      : 0.13,       #standard deviation\n",
     "        'rho'         : 0.4,        #persist rate\n",
@@ -83,6 +58,27 @@
     "        'num_draws'   : 10000       #simulations\n",
     "    }\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'inc_sim' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-3-4f06d817a589>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0minc_sim\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mp\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'inc_sim' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "print(inc_sim(p))"
    ]
   },
   {
