first simulation completed
there seem to be errors at this point- we shouldn't be getting negative values like we are for the final rows (years) in the matrix

--- a/Assignments/A3/Simulation_Exercise.ipynb
+++ b/Assignments/A3/Simulation_Exercise.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,32 +39,31 @@
     "    #create a matrix of lognormally distributed errors, all of the same dimension as number of years* number of simulations\n",
     "    errors = np.random.lognormal(0, p['stddev'] ,(p['lf_years'], p['num_draws']))\n",
     "    \n",
+    "    #define the initial term\n",
+    "    base= np.log(p['inc'])\n",
+    "    \n",
     "    #create an initial matrix of dim (lf_years, num_draws) (same as that of errors)\n",
     "    ln_inc_mat = np.zeros((p['lf_years'], p['num_draws']))\n",
     "\n",
     "    #fill the first row of the matrix with simulations for the first year\n",
-    "    ln_inc_mat[0, :] = np.log(p['inc']) + errors[0, :]\n",
+    "    ln_inc_mat[0, :] = base + errors[0, :]\n",
     "\n",
     "    #loop and apply model to the remaining rows\n",
     "    for t in range(1, p['lf_years']):\n",
-    "        ln_inc_mat[t, :] =       \n",
-    "        (1-p['rho'])*(np.log(['inc'])+ p['g']*(t-2020))+\n",
-    "        p['rho']*ln_inc_mat[t - 1, :]\n",
-    "        +errors[t, : ]\n",
+    "        ln_inc_mat[t, :] = (1-p['rho'])*(base+ p['g']*(t-2020))+p['rho']*ln_inc_mat[t - 1, :]+errors[t, : ]\n",
     "\n",
     "    \n",
-    "    return ln_i\n",
+    "    return ln_inc_mat\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "p = {\n",
-    "        'inc'         : 80000,      #starting income\n",
+    "p = {   'inc'         : 80000,      #starting income\n",
     "        'stddev'      : 0.13,       #standard deviation\n",
     "        'rho'         : 0.4,        #persist rate\n",
     "        'g'           : 0.025,      #growth rate\n",
@@ -77,20 +76,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[1.25011301 1.04311365 0.94017369 ... 0.91957516 1.35123931 1.07905227]\n",
-      " [0.93599086 0.97899666 1.02275776 ... 1.15438517 1.18797204 1.00495741]\n",
-      " [1.27597298 1.23453165 0.76511253 ... 0.90142343 0.81793432 0.94869679]\n",
+      "[[ 12.53989493  12.33289556  12.22995561 ...  12.20935708  12.64102122\n",
+      "   12.36883419]\n",
+      " [-17.55918202 -17.59897597 -17.59639085 ... -17.47300286 -17.26675032\n",
+      "  -17.55863977]\n",
+      " [-29.24383068 -29.30118959 -29.76957467 ... -29.58390857 -29.58489666\n",
+      "  -29.57088997]\n",
       " ...\n",
-      " [0.98444015 0.94745008 0.8616369  ... 1.00277689 1.09818692 1.145407  ]\n",
-      " [0.91261614 0.82762157 0.98184183 ... 0.96184627 1.07245518 1.06348209]\n",
-      " [1.16673196 0.94366777 0.87535866 ... 0.74982951 0.99770358 0.90759846]]\n"
+      " [-36.72385558 -36.67261523 -36.76959069 ... -36.59959415 -36.47552469\n",
+      "  -36.47417781]\n",
+      " [-36.73305694 -36.79755537 -36.6821253  ... -36.63412224 -36.47388555\n",
+      "  -36.48231989]\n",
+      " [-36.46762166 -36.71648523 -36.73862232 ... -36.84495024 -36.5329815\n",
+      "  -36.62646035]]\n"
      ]
     }
    ],
