removed test data for loan function

--- a/Assignments/A3/Simulation_Exercise.ipynb
+++ b/Assignments/A3/Simulation_Exercise.ipynb
@@ -301,17 +301,10 @@
     "    for i in range(len(column)):\n",
     "        debt-= 0.1*column[i]\n",
     "        if debt>0:\n",
-    "            print(debt)\n",
     "            continue\n",
     "        else:\n",
     "            paid_year= i+1\n",
-    "    return paid_year\n",
-    "   \n",
-    "fake_loan=20\n",
-    "test=[10,20,30,40,50,60]\n",
-    "check_debt(test, fake_loan)\n",
-    "      \n",
-    "    "
+    "    return paid_year\n"
    ]
   },
   {
