Added to essay questions

--- a/Assignments/A3/Simulation_Exercise.ipynb
+++ b/Assignments/A3/Simulation_Exercise.ipynb
@@ -48,7 +48,7 @@
     "\n",
     "The author speaks of dynamic feedback and cites the example of using multiagent systems to define models of behaviour such as the description of the concept of social roles.\n",
     "\n",
-    "In the realm of political science, an example of a system that may display such dynamic behaviour would be potential research question that may be addressed would be the funding of election campaigns by private donations. For example, to what extent has funding of election campaigns by individuals hailing from a specific industry increased the probability of the funded candidate in winning the local or state elections? The dynamism emerges from the fact that once elected, the industrialist may himself or herself build up financial resources during the elected candidate's term- by means of lobbying or graft. This in turns helps them continue to fund the same candidate in the "
+    "In the realm of political science, an example of a system that may display such dynamic behaviour would be potential research question that may be addressed would be the funding of election campaigns by private donations. For example, to what extent has funding of election campaigns by individuals hailing from a specific industry increased the probability of the funded candidate in winning the local or state elections? The dynamism emerges from the fact that once elected, the industrialist may himself or herself build up financial resources during the elected candidate's term- by means of lobbying or graft at the behest of the candidate. This in turns helps them continue to fund the same candidate in the next election. "
    ]
   },
   {
