--- a/Assignments/A3/Simulation_Exercise.ipynb
+++ b/Assignments/A3/Simulation_Exercise.ipynb
@@ -60,20 +60,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import scipy.stats as sts\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from matplotlib.ticker import MultipleLocator\n",
-    "#data= sts.norms.rvs(means, std, size)"
+    "from matplotlib.ticker import MultipleLocator\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,11 +107,11 @@
     "    ln_inc_mat = np.zeros((p['lf_years'], p['num_draws']))\n",
     "\n",
     "    #fill the first row of the matrix with simulations for the first year\n",
-    "    ln_inc_mat[0, :] = base + errors[0, :]\n",
+    "    ln_inc_mat[0, :] = base + np.log(errors[0, :])\n",
     "\n",
     "    #loop and apply model to the remaining rows\n",
     "    for t in range(1, p['lf_years']):\n",
-    "        ln_inc_mat[t, :] = (1-p['rho'])*(base+ (p['g']*t))+p['rho']*ln_inc_mat[t - 1, :]+errors[t, : ]\n",
+    "        ln_inc_mat[t, :] = (1-p['rho'])*(base+ (p['g']*t))+p['rho']*ln_inc_mat[t - 1, :]+np.log(errors[t, : ])\n",
     "\n",
     "    \n",
     "    return ln_inc_mat\n",
