Fine Tuning and Refining Politics Example

--- a/Assignments/A3/Simulation_Exercise.ipynb
+++ b/Assignments/A3/Simulation_Exercise.ipynb
@@ -56,14 +56,18 @@
     "\n",
     "The author speaks of dynamic feedback and cites the example of using multiagent systems to define models of behaviour such as the description of the concept of social roles.\n",
     "\n",
-    "In the realm of political science, an example of a system that may display such dynamic behaviour would be potential research question that may be addressed would be the funding of election campaigns by private donations. For example, to what extent has funding of election campaigns by individuals hailing from a specific industry increased the probability of the funded candidate in winning the local or state elections? The dynamism emerges from the fact that once elected, the industrialist may himself or herself build up financial resources during the elected candidate's term- by means of lobbying or graft at the behest of the candidate. This in turns helps them continue to fund the same candidate in the next election. "
+    "In the realm of political science, an example of a system that may display such dynamic behaviour would be patronage relationships between wealthy private funders of the electoral candidates. A potential research question that may be addressed would be the funding of election campaigns by private donations. For example, 'to what extent has funding of election campaigns by individuals hailing from a specific industry increased the probability of the funded candidate in winning the local or state elections?'\n",
+    "\n",
+    "The dynamism emerges from the fact that once elected, the industrialist may himself or herself build up financial resources during the elected candidate's term- by means of lobbying or graft at the behest of the candidate. This in turns helps them continue to fund the same candidate in the next election. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Q2 Simulation in Action"
+    "## Q2 Simulation in Action\n",
+    "\n",
+    "We begin by setting up simulation shop. This would involve a few steps-importing the required libraries and defining the simulation function"
    ]
   },
   {
@@ -72,7 +76,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import scipy.stats as sts\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from matplotlib.ticker import MultipleLocator"
@@ -108,6 +111,13 @@
     "    \n",
     "    return np.exp(ln_inc_mat) #We are interested in the original income values, not the natural logarithm thereof\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### a) Plotting the Initial Simulation Values "
    ]
   },
   {
@@ -359,7 +369,7 @@
     "plt.hist(paid, bins=len(set(paid)))\n",
     "plt.xlabel(\"Number of Years to Pay Off Debt\")\n",
     "plt.ylabel(\"Number of Simulations\")\n",
-    "plt.title(\"Number of Years to Pay Off Debt\")\n"
+    "plt.title(\"Number of Years\")\n"
    ]
   },
   {
@@ -473,7 +483,7 @@
     "plt.hist(paid, bins=len(set(paid_new)))\n",
     "plt.xlabel(\"Number of Years to Pay Off Debt\")\n",
     "plt.ylabel(\"Number of Simulations\")\n",
-    "plt.title(\"Number of Years to Pay Off Debt\")"
+    "plt.title(\"Number of Years\")"
    ]
   },
   {
