--- a/Assignments/A3/Simulation_Exercise.ipynb
+++ b/Assignments/A3/Simulation_Exercise.ipynb
@@ -54,7 +54,7 @@
    "source": [
     "### b) Dynamic Feedback\n",
     "\n",
-    "The author speaks of dynamic feedback and cites the example of using multiagent systems to define models of behaviour such as the description of the concept of social roles.\n",
+    "The author speaks of dynamic feedback and cites the example of using multiagent systems to define models of behaviour such as the description of the concept of social roles. A close exmple provided of this is the use of genetic algorithms to study cooperation among Peruvian herders by Reynolds (1994). \n",
     "\n",
     "In the realm of political science, an example of a system that may display such dynamic behaviour would be patronage relationships between wealthy private funders of the electoral candidates. A potential research question that may be addressed would be the funding of election campaigns by private donations. For example, 'to what extent has funding of election campaigns by individuals hailing from a specific industry increased the probability of the funded candidate in winning the local or state elections?'\n",
     "\n",
